Updates to header - added correct background colour, updated spacing between elements.

--- a/css/dta-gov-au.styles.css
+++ b/css/dta-gov-au.styles.css
@@ -1544,8 +1544,8 @@
     z-index: 600; }
 
 .search-api-page-block-form {
-  margin-bottom: 80px;
-  margin-bottom: 5rem; }
+  margin-bottom: 144px;
+  margin-bottom: 9rem; }
   .search-api-page-block-form form {
     display: table;
     width: 100%; }
@@ -1611,30 +1611,33 @@
 body {
   margin: 0; }
 
-header.au-header.au-header--hero {
-  padding-top: 80px;
-  padding-top: 5rem; }
+.au-body.au-body--dark.au-body--alt {
+  background-color: #414141; }
 
-header img.site-logo {
-  margin-bottom: 80px;
-  margin-bottom: 5rem; }
-
-header h2 {
-  margin: 0 0 80px 0;
-  margin: 0 0 5rem 0;
-  font-size: 48px;
-  font-size: 3rem;
-  line-height: 1;
-  color: #61DAFF; }
-
-header h3 {
-  margin-bottom: 24px;
-  margin-bottom: 1.5rem; }
-
-header .au-body .au-link-list {
-  margin-bottom: 80px;
-  margin-bottom: 5rem; }
-  header .au-body .au-link-list > li:first-child {
-    margin-top: 0; }
+header {
+  border-bottom: 2px solid #e0e0e0; }
+  header.au-header.au-header--hero {
+    padding: 80px 0 0 0;
+    padding: 5rem 0 0 0; }
+    header.au-header.au-header--hero.au-header--alt.au-header--dark {
+      background-color: #414141; }
+  header img.site-logo {
+    margin-bottom: 80px;
+    margin-bottom: 5rem; }
+  header h2 {
+    margin: 0 0 80px 0;
+    margin: 0 0 5rem 0;
+    font-size: 48px;
+    font-size: 3rem;
+    line-height: 1;
+    color: #61DAFF; }
+  header h3 {
+    margin-bottom: 24px;
+    margin-bottom: 1.5rem; }
+  header .au-body .au-link-list {
+    margin-bottom: 80px;
+    margin-bottom: 5rem; }
+    header .au-body .au-link-list > li:first-child {
+      margin-top: 0; }
 
 /*# sourceMappingURL=dta-gov-au.styles.css.map */
