--- a/src/sass/base/_search.scss
+++ b/src/sass/base/_search.scss
@@ -1,6 +1,6 @@
 // Search block.
 .search-api-page-block-form {
-  @include AU-space( margin-bottom, 5unit );
+  @include AU-space( margin-bottom, 9unit );
 
   form {
     display: table;
